2.34.5
======
Oct 7, 2021
- Close input stream after reading RP heartbeat response.

2.34.4
======
Sep 8, 2021
- Banner fix

2.34.3
======
Sep 8, 2021
- Improved CLI usage text

2.34.2
======
Aug 29, 2021
- Improved usage (--help) text
- Issue gwen-interpreter/gwen-web#79: resolve attributes in examples tables
- Fix parallel scenario-level execution for Gherkin's spoken languages/dialects

2.34.1
======
July 31, 2021
- Default `gwen.rp.send.annotations` setting to false

2.34.0
======
July 7, 2021
- Add new DSLs to support invoking system processes with quoted strings and other special cases
  - I execute system process "<process>" delimited by "<delimiter>"
  - I execute a unix system process "<process>" delimited by "<delimiter>"
  - <attribute> <is|will be> defined by system process "<process>" delimited by "<delimiter>"
- Support passing DocStrings as parameters to StepDefs (addresses issue gwen-interpreter/gwen#60)
- Update scala from v2.13.3 to v2.13.6
- Update report portal client-java from v5.0.21 to v5.0.22
  - Long name trunctation fix

2.33.0
======
June 22, 2021
- Report portal integration release
- Add `nodePath` and `sourceRef` options to `gwen.rp.testCaseId.keys` setting to support
  generating test case ID's based on node path or source reference only.
June 7, 2021 - 2.33.0-rc-rp.2
- Fix name clash between parameters and attributes in interpolator
- Convert back slashes in sourceRef and nodePath to forward slashes on Windows
- Send sourceRef as item attribute in report portal if it is less than or equal to 128 
  characeters in length, otherwise append it to the item description instead.
- Enforce case sensitivity on all report portal setting names.
- Improved test case ID generation for nodePath+params mode:
  - Remove all keywords from node paths and use node names only
  - Remove table cooridnates and `Examples` keyword from expanded scenario names in outlines